# xcm-docs

./: 404.html  README.md  book.toml  print.html  searchindex.js  searchindex.json  xcm.html
.github/workflows/: deploy.yml
examples/: Cargo.toml  README.md  rustfmt.toml
examples/src/: first_look.rs  forum.rs  lib.rs
examples/src/0_first_look/: mod.rs
examples/src/10_locks/: mod.rs
examples/src/1_transfers/: mod.rs  teleport.rs
examples/src/2_fees/: mod.rs
examples/src/3_transact/: mod.rs
examples/src/4_origins/: mod.rs
examples/src/5_holding_modifiers/: mod.rs
examples/src/6_trap_and_claim/: mod.rs
examples/src/7_expects/: mod.rs
examples/src/9_version_subscription/: mod.rs
examples/src/emulated_test_net/: mod.rs
examples/src/expects/: mod.rs
examples/src/fees/: mod.rs
examples/src/holding_modifiers/: mod.rs
examples/src/kusama_test_net/: kusama_test_net.rs  mod.rs  yayoi.rs
examples/src/locks/: mod.rs
examples/src/queries/: mod.rs
examples/src/simple_test_net/: asset_hub.rs  mod.rs  parachain.rs  relay_chain.rs
examples/src/transact/: mod.rs
examples/src/transfers/: reserve.rs  teleport.rs
examples/src/trap_and_claim/: mod.rs
examples/src/version_subscription/: mod.rs
executor_config/: index.html
fundamentals/: index.html  multiasset.html  weight_and_fees.html  xcvm.html
fundamentals/multilocation/: example.html  index.html  junction.html
journey/: channels-and-bridges.html  expects.html  holding-modifiers.html  index.html  origins.html  queries.html  register-modifiers.html  transact.html  trap-and-claim.html  version.html
journey/fees/: index.html
journey/locks/: locks.html
journey/transfers/: index.html  reserve.html  teleports.html
overview/: architecture.html  format.html  index.html  interoperability.html  xcvm.html
quickstart/: first-look.html  index.html  xcm-simulator.html
src/: SUMMARY.md  xcm.md
src/executor_config/: README.md  barrier.md
src/fundamentals/: README.md  multiasset.md  multilocation.md  weight_and_fees.md  xcvm.md
src/fundamentals/multilocation/: README.md  example.md  junction.md
src/journey/: README.md  channels-and-bridges.md  expects.md  holding-modifiers.md  origins.md  queries.md  register-modifiers.md  transact.md  trap-and-claim.md  version.md
src/journey/fees/: README.md
src/journey/locks/: locks.md
src/journey/transfers/: README.md  reserve.md  teleports.md
src/overview/: README.md  architecture.md  format.md  interoperability.md  xcvm.md
src/quickstart/: README.md  first-look.md  xcm-emulator.md  xcm-simulator.md
src/reference/: glossary.md  xcvm-registers.md
src/testing/: README.md
src/transport_protocols/: README.md
