[package]
name = "xcm-examples"
version = "0.1.0"
edition = "2021"
authors = ["Xcm Team"]


[dependencies]
bounded-collections = { version = "0.1.5", default-features = false }
smallvec = "1.4.0"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.85" }
hex = { version = "0.4" }
hex-literal = { version = "0.3.1" }
libsecp256k1 = { version = "0.7" }

#Polkadot
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-nfts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
kusama-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
# substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
statemine-runtime = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }

xcm-emulator = { git = "https://github.com/shaunxw/xcm-simulator", rev = "aa13dce47596e150806dfc3af99096dae6ffc65e" }

[dev-dependencies]
env_logger = "0.9.0"
log = "0.4.17"
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }


